# clothing_brand

./: README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-ruff.yml  pr-title-check.yml
core/: pyproject.toml
core/src/: db.sqlite3
core/src/categories/: admin.py  models.py
core/src/categories/migrations/: 0001_initial.py
core/src/config/: settings.py  urls.py
core/src/custom/: serializers.py  views.py
core/src/custom/migrations/: 0001_initial.py
core/src/products/: admin.py  models.py  urls.py  views.py
core/src/products/migrations/: 0001_initial.py
