[project]
name = "clothing-brand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "pyyaml>=6.0.2",
    "django-filter",
    "psycopg2-binary",         # PostgreSQL driver
    "djangorestframework-simplejwt",  # JWT auth
    "django-cors-headers",     # CORS for APIs
    "python-dotenv",           # Environment variable management
    "Pillow",                  # Image handling
    "celery",                  # Background tasks
    "redis",                   # Caching/broker for Celery
    "drf-yasg",                # API docs (Swagger/OpenAPI)
    "django-extensions",       # Extra management commands
    "django-debug-toolbar",    # Debugging in development
    "gunicorn",                # Production WSGI server
    "whitenoise",              # Static file serving
    # Testing
    "pytest",
    "pytest-django",
    "pytest-cov",
    "factory-boy",
    "requests",
    "pook",
    "pytest-mock",
]
